email and number of guests added
