# swagger.json
@@ -7,7 +7,7 @@
       "name": "MIT"
     }
   },
-  "host": "localhost:3000",
+  "host": "localhost:3001",
   "basePath": "/",
   "schemes": ["http"],
   "consumes": ["application/json"],
@@ -81,6 +81,12 @@
         },
         "reservingTo": {
           "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "nrOfGuests": {
+          "type": "integer"
         }
       }
     }
